--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('./Landing_webinar2.jpg');
+    background-image: url('/Landing_webinar2.jpg');
   
     background-repeat: no-repeat;
     background-size:100%;
